perfect certering the divs are done

--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 </head>
 <body>
     <div id="container">
-        <h1> BMI Calculator</h1> <br>
+        <h1> BMI Calculator</h1> 
+        <div id="weight">
         <input type="text" name="" id="weight" placeholder="enter your weight in kg"> 
-         <br>
+    </div>
+    <div id="height">
         <input type="text" name="" id="height" placeholder="enter your height in meter"> 
-        <br>
+    </div>
+    <div id="button">
         <button>calculate</button>
+    </div>
     </div> 
 </body> 
 <script src="./js.script"></script>
