start  working in js file

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         <input type="text" name="" id="height" placeholder="enter your height in meter"> 
     </div>
     <div id="button">
-        <button>calculate</button>
+        <button onclick="bmiclculator">calculate</button>
     </div>
     </div> 
+    <script src="./script.js"></script>
 </body> 
-<script src="./js.script"></script>
+
 </html>
