--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <div id="container">
-        <h1> BMI Calculator</h1> 
+      
+        <h1> BMI  Calculator</h1> 
         <div id="weight">
-        <input type="text" name="" id="weight" placeholder="enter your weight in kg"> 
+            <input type="text" placeholder="enter your age in kg" id="weight">
     </div>
     <div id="height">
         <input type="text" name="" id="height" placeholder="enter your height in meter"> 
     </div>
-    <div id="button">
-        <button onclick="bmiclculator">calculate</button>
+    <div id="buttondiv">
+        <button onclick="bmiclculator"id="button" >calculate</button>
     </div>
     </div> 
     <script src="./script.js"></script>
