--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <div id="height">
         <input type="text" name="" id="height" placeholder="enter your height in meter"> 
     </div>
-    <div id="buttondiv">
-        <button onclick="bmiclculator"id="button" >calculate</button>
+    <div id="buttondiv"> 
+        <button id="button" onclick="bmiCalculator()">calculate</button>
+        <p id="result"></p>
     </div>
+    
     </div> 
     <script src="./script.js"></script>
 </body> 
